--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <!-- 图片切换代码 开始 -->
             <div id="full-screen-slider">
                 <ul id="slides">
-                    <li bgcolor="#f0f0f0" style="background:url('upload/slide-1.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
-                    <li bgcolor="#5eafe7" style="background:url('upload/slide-2.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
-                    <li bgcolor="#5db8d5" style="background:url('upload/slide-3.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#f0f0f0" style="background:url('images/slide-1.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#5eafe7" style="background:url('images/slide-2.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#5db8d5" style="background:url('images/slide-3.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
                 </ul>
             </div>
             <div class="slidexia"></div>
@@ -127,7 +127,7 @@
 
             <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
                 <tr>
-                    <th class="tal" scope="col" width="20%"><span class="ft24">投资项目</span></th>
+                    <th class="tal" scope="col" width="30%"><span class="ft24">投资项目</span></th>
                     <th scope="col">年化收益</th>
                     <th scope="col">需求金额</th>
                     <th scope="col">投资进度</th>
