--- a/invest-one.html
+++ b/invest-one.html
@@ -71,58 +71,86 @@
 
             <div class="shaixuan mt20">
                 <h4 class="lh30">筛选投资项目</h4>
-                <dl class="sxdl clearfix mt10"><dt>借款期限：</dt><dd class="clearfix"><a class="on">不限</a><a class="fit">1个月</a><a class="fit">2个月</a><a class="fit">3个月</a><a class="fit">3-6个月</a><a class="fit">6个月以上</a></dd></dl>
-                <dl class="sxdl clearfix mt10"><dt>借款金额：</dt><dd class="clearfix"><a class="on">不限</a><a class="fit">0-10万</a><a class="fit">10-20万</a><a class="fit">20-50万</a><a class="fit">50-100万</a><a class="fit">100万以上</a></dd></dl>
-                <dl class="sxdl clearfix mt10"><dt>投资进度：</dt><dd class="clearfix"><a class="on">不限</a><a class="fit">20%以内</a><a class="fit">20%-50%</a><a class="fit">50%-80%</a><a class="fit">80%-100%</a></dd></dl>
+
+                <table class="nbr sx">
+                    <tr>
+                        <td>借款期限 : </td>
+                        <td><a class="on">不限</a></td>
+                        <td><a>1个月</a></td>
+                        <td><a>2个月</a></td>
+                        <td><a>3个月</a></td>
+                        <td><a>3-6个月</a></td>
+                        <td><a>6个月以上</a></td>
+                    </tr>
+                    <tr>
+                        <td>借款金额 : </td>
+                        <td><a class="on">不限</a></td>
+                        <td><a>0-10万</a></td>
+                        <td><a>10-20万</a></td>
+                        <td><a>20-50万</a></td>
+                        <td><a>50-100万</a></td>
+                        <td><a>100万以上</a></td>
+                    </tr>
+                    <tr>
+                        <td>投资进度 : </td>
+                        <td><a class="on">不限</a></td>
+                        <td><a>20%以内</a></td>
+                        <td><a>20%-50%</a></td>
+                        <td><a>50%-80%</a></td>
+                        <td><a>80%-100%</a></td>
+                    </tr>
+                </table>
             </div>
 
-            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
-                <tr>
-                    <th class="tal" scope="col" width="20%"><span class="ft24">投资项目</span></th>
-                    <th scope="col">年化收益</th>
-                    <th scope="col">需求金额</th>
-                    <th scope="col">投资进度</th>
-                    <th scope="col">期限</th>
-                    <th scope="col">产品类型</th>
-                    <th scope="col" width="12%">操作</th>
-                </tr>
-                <tr>
-                    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
-                    <td><span class="y-rate">9.5</span>%</td>
-                    <td>100万</td>
-                    <td>60%</td>
-                    <td>6个月</td>
-                    <td>车辆质押</td>
-                    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
-                </tr>
-                <tr>
-                    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
-                    <td><span class="y-rate">9.5</span>%</td>
-                    <td>100万</td>
-                    <td>60%</td>
-                    <td>6个月</td>
-                    <td>车辆抵押</td>
-                    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
-                </tr>
-                <tr>
-                    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">大众朗逸</a> </td>
-                    <td><span class="y-rate">99.5</span>%</td>
-                    <td>100万</td>
-                    <td>60%</td>
-                    <td>6个月</td>
-                    <td>项目担保</td>
-                    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
-                </tr>
-                <tr>
-                    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">大众朗逸</a> </td>
-                    <td><span class="y-rate">99.5</span>%</td>
-                    <td>100万</td>
-                    <td>100%</td>
-                    <td>6个月</td>
-                    <td>项目担保</td>
-                    <td><a class="tzbtn tzbtn2">详情</a></td>
-                </tr>
-            </table>
+            <div class="pl10">
+                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
+                    <tr>
+                        <th class="tal" scope="col" width="30%"><span class="ft24">投资项目</span></th>
+                        <th scope="col">年化收益</th>
+                        <th scope="col">需求金额</th>
+                        <th scope="col">投资进度</th>
+                        <th scope="col">期限</th>
+                        <th scope="col">产品类型</th>
+                        <th scope="col" width="12%">操作</th>
+                    </tr>
+                    <tr>
+                        <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
+                        <td><span class="y-rate">9.5</span>%</td>
+                        <td>100万</td>
+                        <td>60%</td>
+                        <td>6个月</td>
+                        <td>车辆质押</td>
+                        <td><a href="trade-details.html" class="tzbtn">投标</a></td>
+                    </tr>
+                    <tr>
+                        <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
+                        <td><span class="y-rate">9.5</span>%</td>
+                        <td>100万</td>
+                        <td>60%</td>
+                        <td>6个月</td>
+                        <td>车辆抵押</td>
+                        <td><a href="trade-details.html" class="tzbtn">投标</a></td>
+                    </tr>
+                    <tr>
+                        <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">大众朗逸</a> </td>
+                        <td><span class="y-rate">99.5</span>%</td>
+                        <td>100万</td>
+                        <td>60%</td>
+                        <td>6个月</td>
+                        <td>项目担保</td>
+                        <td><a href="trade-details.html" class="tzbtn">投标</a></td>
+                    </tr>
+                    <tr>
+                        <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">大众朗逸</a> </td>
+                        <td><span class="y-rate">99.5</span>%</td>
+                        <td>100万</td>
+                        <td>100%</td>
+                        <td>6个月</td>
+                        <td>项目担保</td>
+                        <td><a class="tzbtn tzbtn2">详情</a></td>
+                    </tr>
+                </table>
+            </div>
 
 
             <div class="pages mb20"><a href="#">首页</a><a href="#">上一页</a><a href="#"  class="now">1</a><a href="#">2</a><a href="#">3</a><a href="#">上一页</a><a href="#">下一页</a><a href="#">尾页</a><span>共3页</span></div>
