--- a/transfer.html
+++ b/transfer.html
@@ -71,33 +71,32 @@
 
             <div class="shaixuan">
                 <h4 class="lh30">筛选投资项目</h4>
-                <dl class="sxdl clearfix mt10"><dt> 剩余期限：</dt>
-                    <dd class="clearfix">
-                        <a begin="" end="" name="term" class="on">不限</a>
-                        <a class="fit" begin="0" end="1" name="term">1个月</a>
-                        <a class="fit" begin="1" end="3" name="term">2个月</a>
-                        <a class="fit" begin="3" end="6" name="term">3个月</a>
-                        <a class="fit" begin="6" end="9" name="term">3-6个月</a>
-                        <a class="fit" begin="9" end="12" name="term">6个月以上</a>
-                    </dd>
-                </dl>
-                <dl class="sxdl clearfix mt10"><dt>转让金额：</dt>
-                    <dd class="clearfix">
-                        <a begin="" end="" name="amount" class="on">不限</a>
-                        <a class="fit" begin="0" end="500000" name="amount">0-10万</a>
-                        <a class="fit" begin="500000" end="1000000" name="amount">10-20万</a>
-                        <a class="fit" begin="1000000" end="5000000" name="amount">20-50万</a>
-                        <a class="fit" begin="5000000" end="10000000" name="amount">50-100万</a>
-                        <a class="fit" begin="10000000" end="50000000" name="amount">100万以上</a>
-                    </dd>
-                </dl>
-                <dl class="sxdl clearfix mt10"><dt>p2p产品：</dt>
-                    <dd class="clearfix">
-                        <a key="" name="productId" class="on">不限</a>
-                        <a class="fit" key="0" name="productId">车易贷</a>
-                        <a class="fit" key="1" name="productId">兴业贷</a>
-                    </dd>
-                </dl>
+                <table class="nbr sx">
+                    <tr>
+                        <td>剩余期限 : </td>
+                        <td><a class="on">不限</a></td>
+                        <td><a>1个月</a></td>
+                        <td><a>2个月</a></td>
+                        <td><a>3个月</a></td>
+                        <td><a>3-6个月</a></td>
+                        <td><a>6个月以上</a></td>
+                    </tr>
+                    <tr>
+                        <td>转让金额 : </td>
+                        <td><a class="on">不限</a></td>
+                        <td><a>0-10万</a></td>
+                        <td><a>10-20万</a></td>
+                        <td><a>20-50万</a></td>
+                        <td><a>50-100万</a></td>
+                        <td><a>100万以上</a></td>
+                    </tr>
+                    <tr>
+                        <td>p2p产品 : </td>
+                        <td><a class="on">不限</a></td>
+                        <td><a>车易贷</a></td>
+                        <td><a>兴业贷</a></td>
+                    </tr>
+                </table>
             </div>
 
             <div class="transfer-list bor mt20">
@@ -107,7 +106,7 @@
 
                 <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20 mb20">
                     <tr>
-                        <th scope="col" width="20%">债权项目</th>
+                        <th scope="col" width="30%" class="tal"><span class="ft24">债权项目</span></th>
                         <th scope="col">年化收益率</th>
                         <th scope="col">转让金额</th>
                         <th scope="col">剩余期数</th>
