front-page icon & change a word

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="tongji row clearfix">
                 <div class="col-xs-5">
                     <div class="intro">
-                        <h2 class="c900">什么是车宜贷?</h2>
+                        <h2 class="c900">什么是车易贷?</h2>
                         <p class="ft14">金仓贷针对手中持有小额闲置资金的投资客户,推出以机动车为抵、质押物的投资产品。投资者可通过金仓贷选择自己喜欢的项目,向融资者借出资金。<a href="security.html" class="c900">了解更多&gt;</a></p>
                     </div>
                 </div>
