--- a/index.html
+++ b/index.html
@@ -174,13 +174,14 @@
         <div class="footer">
             <div style="width:1000px; margin:0 auto">
                 <div style="width:80%" class="tal fl">
-                    <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
+                    <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">易极付</a><a href="#">重庆海雄名车</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
                     <!-- <img src="images/test-qrcode.jpg" style="width:100px;"> -->
                 </div>
                 <div class="clearfix"></div>
-                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
+                <div class="tac mt20"><span class="pr20">全国统一客服热线：<span class="c900">4006-855-966</span></span><span class="pl20">地址： 重庆渝北区龙山大道111号龙湖紫都城2-3栋2-6号</span></div>
+                <div class="tac c999">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
             </div>
         </div>
 
