--- a/loan.html
+++ b/loan.html
@@ -72,8 +72,8 @@
                 <div class="fl bor loan-item">
                     <h2 class="lh24 bg-blue">车宜贷</h2>
                     <div class="loan-item-inner">
-                        <div class="bor-light sameH">
-                            <h4 class="lh36 mt20">申请条件：</h4>
+                        <div class="bor-light sameH pt20">
+                            <h4 class="lh36">申请条件：</h4>
                             <p class="ft14 lh24 loan-apply-con">申请限于重庆主城区车主（渝A、渝B车牌）。</p><br>
                             <table class="loan-table loan-table-1" width="100%" cellpadding="0" cellspacing="0">
                                 <h4 class="lh36">提供材料：</h4>
@@ -105,8 +105,8 @@
                 <div class="fr bor loan-item">
                     <h2 class="lh24 bg-green">兴业贷</h2>
                     <div class="loan-item-inner">
-                        <div class="bor-light sameH">
-                            <h4 class="lh36 mt20">申请条件：</h4>
+                        <div class="bor-light sameH pt20">
+                            <h4 class="lh36">申请条件：</h4>
                             <p class="ft14 lh24 loan-apply-con">22周岁以上中国公民;</p>
                             <p class="ft14 lh24 loan-apply-con">经营时间一年以上;</p>
                             <p class="ft14 lh24 loan-apply-con">申请限于法人代表。</p><br>
