--- a/security.html
+++ b/security.html
@@ -73,8 +73,8 @@
                         <div class="security-s security-s-1"><strong>用户安心</strong>：第三方交易资金托管</div>
                         <div class="row mt20">
                             <div class="col-xs-11">
-                                <p class="ft18"> 金仓贷与人民银行批准的第三方支付平台易极付合作，托管资金采用更安全、更可靠、更先进的银行级保障模式。</p>
-                                <p class="ft18">用户单独开户，所有交易均由用户操作，资金通过易极付直接划转，完全保证用户对账户的独立掌控。金仓贷以明确的中间服务隔离用户资金，第三方支付系统严格的交易管控分离用户账户，资金托管为金仓贷的合法、安全运营保驾护航。</p>
+                                <p class="ft18">金仓贷与人民银行批准的第三方支付平台易极付合作，托管资金采用更安全、更可靠、更先进的银行级保障模式。</p>
+                                <p class="ft18">用户单独开户，所有交易均由用户操作，资金通过易极付直接划转，完全保证用户对账户的独立掌控。金仓贷以明确的居中服务隔离用户资金，易极付以严格的交易管控分离用户账户，资金托管服务为金仓贷的合法、安全运营保驾护航。</p>
                             </div>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                         <div class="row mt20">
                             <div class="col-xs-1"></div>
                             <div class="col-xs-11">
-                                <p class="ft18">    金仓贷平台内部已建立严格隐私保密体系，在任何情况下绝不出售、出租或以其他形式泄漏用户的信息。网站发布信息时，将采取适当措施和方法，以保护用户信息的安全，为您提供服务贴心的一流服务。</p>
+                                <p class="ft18">金仓贷平台系统采用三层架构，两道防火墙，按照国家《计算机信息系统安全保护等级划分准则》（GB 17859-1999）对应等级保护能力对系统进行防护；平台内部建立严格隐私保密体系，运用多种防护措施（登录密码，支付密码，短信验证码，用户访问控制，操作权限控制等）保护用户信息，以实现对用户数据安全的承诺。</p>
                             </div>
                         </div>
                     </div>
@@ -103,8 +103,8 @@
                     <div class="col-xs-7">
                         <div class="row mt20">
                             <div class="col-xs-11">
-                                <p class="ft18">我们严格遵循车辆质押借款金额不高于车辆二手评估价八折的原则，根据抵、质押车辆的车龄、行驶里程、车辆状况等基本信息，使用第三方专业二手车评估软件对抵、质押车辆做二手车市场价值评定，同时还将综合考查借款人的征信及还款来源，对其申请的贷款金额进行最终评定。</p>
-                                <p class="ft18">此外，我们与四川创业融资担保有限公司（成立于2004年，注册资金10.7亿元）达成初步合作意向。前期，四川创业融资担保有限公司将为金仓贷的融资项目提供独立的二次风控审核。为后续金仓贷与其建立长期合作——对车易贷产品提供项目担保打下基础。双重风险审核进一步增强了对融资项目的风险审查，为投资者甄选放心项目。</p>
+                                <p class="ft18">金仓贷严格遵循“车辆质押借款金额不高于车辆二手评估价八折”的原则，根据抵、质押车辆的车龄、行驶里程、车辆状况等基本信息，使用第三方专业二手车评估软件对抵、质押车辆做二手车市场价值评定，同时还将综合考查借款人的征信及还款来源，对其申请的贷款金额进行最终评定。</p>
+                                <p class="ft18">此外，金仓贷与四川创业融资担保有限公司（成立于2004年，注册资金10.7亿元）达成初步合作意向。前期，四川创业融资担保有限公司将为金仓贷的融资项目提供独立的二次风控审核，为长期合作—为车易贷产品提供项目担保—打下基础。双重风险审核将有效提升融资项目的风险把控，为投资者甄选放心项目。</p>
                             </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                         <div class="row mt20">
                             <div class="col-xs-1"></div>
                             <div class="col-xs-11">
-                                <p class="ft18">为了更充分保障投资者利益，更好的进行自我监管，金仓贷与招商银行重庆分行签署了风险准备金托管协议。招商银行重庆分行将对金仓贷的风险准备金专户资金进行独立托管，一旦借款人发生违约，金仓贷将在15个工作日内按照风险准备金“资金运用用途规定”，从该账户中提取相应资金用于偿付投资者在该笔受保障借款项下剩余未还本金和利息。招商银行重庆分行每月针对风险备用金专户资金实际进出情况出具托管报告。</p>
+                                <p class="ft18">为了更充分保障投资者利益，更好的进行自我监管，金仓贷与招商银行（重庆分行）签署了风险准备金托管协议。招商银行（重庆分行）将对金仓贷的风险准备金专户资金进行独立托管，一旦借款人发生违约，金仓贷将在15个工作日内按照《风险准备金资金运用用途规定》，从该专户中提取相应资金用于偿付投资者在该笔受保障借款项下剩余未还本金和利息。招商银行重庆分行每月针对风险准备金专户资金实际进出情况出具托管报告。</p>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         <div class="security-s security-s-5"><strong>将心比心</strong>：第三方平台资产处置</div>
                         <div class="row mt20">
                             <div class="col-xs-11">
-                                <p class="ft18">金仓贷严格遵循国家相关法律法规。为了预防融资项目违约产生的风险，保障投资者的资金安全与收益。四川创业融资担保有限公司将为金仓贷处置违约车辆提供合法、快速通道，最短时间内处置违约车辆。</p>
+                                <p class="ft18">金仓贷严格遵守国家相关法律法规。为预防融资项目违约产生的风险，保障投资者的资金安全与收益，四川创业融资担保有限公司将为金仓贷处置违约车辆提供合法、快速通道，在最短时间内处置违约车辆。</p>
                             </div>
                         </div>
                     </div>
