--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     </div>
                 </div>
                 <div class="col-xs-1"></div>
-                <div class="col-xs-3 mt10"><dt class="png tj_tzje"></dt><dd><span class="ft28">18.88</span><span class="ft16">亿</span><p class="ft14">累计投资金额</p></dd></div>
-                <div class="col-xs-3 mt10"><dt class="png tj_zqsy"></dt><dd><span class="ft28">18.88</span><span class="ft16">亿</span><p class="ft14">xx位车主获得融资</p></dd></div>
+                <div class="col-xs-3 mt10"><dt class="png tj_tzr"></dt><dd><span class="ft28">56000</span><span class="ft16">人</span><p class="ft14">投资人加入</p></dd></div>
+                <div class="col-xs-3 mt10"><dt class="png tj_zqsy"></dt><dd><span class="ft28">18.88</span><span class="ft16">万元</span><p class="ft14">累计投资金额</p></dd></div>
             </div>
 
 
@@ -174,14 +174,14 @@
         <div class="footer">
             <div style="width:1000px; margin:0 auto">
                 <div style="width:80%" class="tal fl">
-                    <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">易极付</a><a href="#">重庆海雄名车</a></dd></dl>
+                    <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">易极付</a><a href="#">重庆海雄名车</a><a href="http://www.dhl.com.cn/">德恒律师事务所</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
                     <!-- <img src="images/test-qrcode.jpg" style="width:100px;"> -->
                 </div>
-                <div class="clearfix"></div>
-                <div class="tac mt20"><span class="pr20">全国统一客服热线：<span class="c900">4006-855-966</span></span><span class="pl20">地址： 重庆渝北区龙山大道111号龙湖紫都城2-3栋2-6号</span></div>
-                <div class="tac c999">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
+                <div class="clear-col"></div>
+                <div class="tac mt20 c900"><span class="pr20">全国统一客服热线：4006-855-966</span><span class="pl20">地址： 重庆渝北区龙山大道111号龙湖紫都城2-3栋2-6号</span></div>
+                <div class="tac c999">版权所有 © 深圳骐特·金仓贷 粤ICP备14091442号</div>
             </div>
         </div>
 
